# OptimQL

./: .gitignore  CONTRIBUTORS.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  test_pipeline.py
backend/: database.py  db_utils.py  main.py
backend/agents/: analysis.py  optimization.py  orchestrator.py  safety.py  validation.py
frontend/: app.py
frontend/react-app/: README.md  index.html  package.json  tsconfig.json
frontend/react-app/src/: App.tsx  index.css
frontend/react-app/src/components/: OptimizationResults.tsx  PerformanceMetrics.tsx  QueryEditor.tsx
frontend/react-app/src/components/ui/: button.tsx  sonner.tsx  textarea.tsx
frontend/react-app/src/utils/: toast.ts
tests/: test_orchestrator.py  test_smoke.py  validate_all_queries.py
tools/: explain_products.py  explain_query.py  inspect_optimization.py  run_orchestrator.py  test_analyze.py
